# Student-Dropout-Prediction

./: GitHub_Yarparvar_Darya_CAM_C201_Week_6_Mini_project.ipynb  README.md  pyproject.toml
