[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Student Dropout Prediction"
version = "1.0.0"
description = "Studen dropout prediction pipeline with neural networks and XGBoost, featuring automated pre-processing, hyperparameter tuning, and model explainability."
authors = [{name = "Darya Yarparvar", email = "d.yarparvar@gmail.com"}]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    geopandas==1.1.1
    hyperopt==0.2.7
    keras==3.10.0
    keras-hub==0.21.1
    keras-nlp==0.21.1
    matplotlib==3.10.0
    matplotlib-inline==0.2.1
    matplotlib-venn==1.1.2
    numpy==2.0.2
    pandas==2.2.2
    pandas-datareader==0.10.0
    pandas-gbq==0.30.0
    pandas-stubs==2.2.2.240909
    plotly==5.24.1
    scikit-learn==1.6.1
    seaborn==0.13.2
    shap==0.50.0
    shapely==2.1.2
    sklearn-pandas==2.2.0
    tensorflow==2.19.0
    tensorflow-datasets==4.9.9
    tensorflow-hub==0.16.1
    tensorflow-metadata==1.17.2
    tensorflow-probability==0.25.0
    tensorflow-text==2.19.0
    tensorflow_decision_forests==1.12.0
    tf_keras==2.19.0
    xgboost==3.1.2
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0"
]
